--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -7,19 +7,17 @@ events {
     worker_connections  1024;
 }
 
-
 http {
   server {
     listen 80;
     location / {
-      proxy_pass http://frontend:3000/;
+      proxy_pass http://$FRONTEND:3000/;
     }
     location /api {
-      proxy_pass http://backend/api;
+      proxy_pass http://$BACKEND/api;
     }
     location /media {
-      proxy_pass http://backend/media;
+      proxy_pass http://$BACKEND/media;
     }
   }
 }
-
